# training-tracking

./: .prettierrc  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
public/: noise-background.jfif  site.webmanifest
src/: App.css  App.tsx  DatabaseContext.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: db.sql
src-tauri/src/: lib.rs  main.rs
src/assets/: CalendarRepeat.tsx  Check.tsx  ChevronRight.tsx  Flame.tsx  Menu.tsx  XIcon.tsx
src/components/: BtsCheck.tsx  CalendarDays.tsx  CalendarWeeks.tsx  Loading.tsx  Spinner.tsx
src/components/header/: Header.tsx  StreaksMenu.tsx  UserMenu.tsx
src/consts/: Date.ts
src/context/: DatabaseProvider.tsx  DbContext.ts
src/page/: CreateRoutine.tsx
src/services/: trainingDB.ts
src/styles/: loaderAnimation.module.css  statusBts.module.css
src/types/: PropsIcon.ts  UserMetadata.ts
src/utils/: getCurrentDay.ts
