[package]
name = "training-track"
version = "0.3.4"
description = "A Tauri App"
authors = ["Eze-sk"]
edition = "2021"

[lib]
name = "training_track_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

